wanted to add some new css

--- a/assets/style.css
+++ b/assets/style.css
@@ -100,12 +100,24 @@ div#moves {
     margin-left:60px;
     top:256px;
     padding: 0;
+    border: green solid 2px;
 }
 #bigPokemon{
     position: absolute;
     left:50%;
     top: 109px;
     margin-left:-290px;
+}
+#smallOne_name{
+    border:red solid 1px;
+}
+/*echo '<img src="'.($response_smallOne['sprites']['front_default']).'" width="230" id="smallPokemon" />'; */
+#smallPokemon{
+    position:absolute;
+    left:50%;
+    top: 109px;
+    margin-left:0;
+    border: red 1px solid;
 }
 #noData_error{
     position: absolute;
